Fixed form array alignment when button is followed by error messages

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -282,17 +282,13 @@ html, body {
   }
 }
 
-.form-array > * {
-  margin-right: 4px;
-
-  &:last-child {
-    margin-right: 0;
-  }
-}
-
 .form-array {
   display: flex;
   flex-wrap: wrap;
+
+  :not([type=button]) {
+    margin-right: 4px;
+  }
 
   input {
     flex: 1;
